--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,1 +1,9 @@
 $color-primary: #1ea7fd;
+$color-red: #FA3E3E;
+$color-background: #EFEFEF;
+$color-green: #32CD32;
+
+$font-weight-light: 300;
+$font-weight-medium: 500;
+$font-weight-bold: 600;
+$font-weight-bolder: 700;
