Implement more components. Setup Storybook tests

--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -5,12 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: $color-primary;
-
-    svg {
-        display: inline-block;
-        vertical-align: top;
-    }
+    //background-color: $color-primary;
 
     h1 {
         font-weight: 900;
