--- a/styles/Button.module.scss
+++ b/styles/Button.module.scss
@@ -18,6 +18,11 @@
     box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 0px 1px inset;
   }
 
+  &--success {
+    color: white;
+    background-color: #4BB543;
+  }
+
   &--small {
     font-size: 12px;
     padding: 10px 16px;
