--- a/styles/Product.module.scss
+++ b/styles/Product.module.scss
@@ -1,6 +1,6 @@
 .product {
   width: 300px;
-  min-height: 300px;
+  min-height: 400px;
   margin: 35px auto;
   background-color: $color-background;
   position: relative;
@@ -19,6 +19,11 @@
       display: inline-block;
       font-weight: $font-weight-bold;
     }
+  }
+
+  &__info {
+    display: flex;
+    align-items: center;
   }
 
   &__prices {
@@ -50,19 +55,12 @@
     justify-content: center;
     align-items: center;
     font-weight: bold;
+    color: white;
 
     &--new {
       top: 10px;
       left: 0;
       background: $color-primary;
-    }
-
-    &--sale {
-      background: $color-red;
-      border-radius: 50%;
-      min-width: unset;
-      width: 60px;
-      height: 60px;
     }
 
     &--bestseller {
